--- a/src/components/WashProducts.css
+++ b/src/components/WashProducts.css
@@ -1,6 +1,33 @@
+.product-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    gap: 1rem; 
+}
+
+.product-wrapper{
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    height: 350px;
+    padding: 2rem;
+    background-color: white;
+}
+
+.product-name{
+    color: #00C167;
+    padding-bottom: 1rem;
+}
+
+.product-text {
+    font-weight: 300;
+    line-height: 150%;
+}
+
 .product-price{
     font-weight: 600;
-    font-size: 35px;
+    font-size: 45px;
+    padding-bottom: 0.5rem;
 }
 
 button:disabled{
@@ -9,3 +36,25 @@ button:disabled{
     box-shadow: inset 0 -1px 0 0 rgb(79, 79, 79);
     content: "Lukket";
 } 
+
+.btn-wrapper {
+    width: 200px;
+    height: 0;
+}
+
+.btn-tilbage {
+    margin-top: 3rem;
+    margin-left: 4rem;
+}
+
+.timer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+}
+
+.timer{
+    font-size: 70px;
+    font-weight: 900;
+}
